--- a/src/component/Css.css
+++ b/src/component/Css.css
@@ -1,3 +1,9 @@
-.card{
-    cursor: 'pointer'
+.card p{
+  
+ text-align: center;
+  width: 10px;
+  height: 10px;
+  margin: 3px;
+  padding: 3px;
+  border: 1px solid black;
   }
